# Crafters

./: CMakeLists.txt  Camera.h  Chunk.h  Shader.h  ViewFrustum.h  atlas.xcf  blur.frag  button.xcf  clouds.frag  clouds.vert  crosshair.frag  crosshair.vert  depth.frag  depth.vert  final.frag  font.xcf  highlighter.frag  highlighter.vert  lista.txt  loading.xcf  main.cpp  shader.frag  shader.vert  skybox.frag  skybox.vert  sun.xcf  ui.frag  ui.vert  ui_icons.xcf
lib/include/glad/: glad.h
lib/src/: glad.c
